--- a/selector_signal.cfg
+++ b/selector_signal.cfg
@@ -11,7 +11,7 @@
         <VAL>$300001:$000C</VAL>
       </VALUE1>
       <VALUE2>
-        <VAL>$300002:$001E</VAL>
+        <VAL>$300002:$001F</VAL>
       </VALUE2>
       <VALUE3>
         <VAL>$300003:$001E</VAL>
